bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value fini
fini=false
^BDR:2: error: not found: value fini
while(!fini){
       ^BDR:4: error: not found: value R
  if (litMessage()==R){
                    ^BDR:7: error: not found: value L
} else if (litMessage==L){
                       ^BDR:10: error: not found: value I
}else if (litMessage==I){
                      ^BDR:13: error: not found: value A
}else if(litMessage==A){
                     ^BDR:15: error: not found: value B
}else if(litMessage==B){
                     ^BDR:18: error: not found: value C
}else if(litMessage==C){
                     ^BDR:22: error: not found: value Z
}else if(litMessage==Z){
                     ^BDR:25: error: not found: value Y
}else if(litMessage==Y){
                     ^BDR:29: error: not found: value X
}else if(litMessage==X){
                     ^BDR:35: error: not found: value fini
    fini=true
    ^